# backend/routers/__init__.py
@@ -1,3 +1,3 @@
-# Copyright 2024 Apache TacticalMesh Contributors
+# Copyright 2024 TacticalMesh Contributors
 # SPDX-License-Identifier: Apache-2.0
 """Routers package initialization."""
